--- a/Tap to Sort/Base.lproj/Main.storyboard
+++ b/Tap to Sort/Base.lproj/Main.storyboard
@@ -22,13 +22,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <connections>
-                        <segue destination="BV1-FR-VrT" kind="show" identifier="MenuToGame" id="Ij6-8D-M0d"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="66d-gh-IK5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-887.20000000000005" y="36.431784107946029"/>
+            <point key="canvasLocation" x="-671" y="15"/>
         </scene>
         <!--Game View Controller-->
         <scene sceneID="tXr-a1-R10">
@@ -42,7 +39,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-54" y="36"/>
+            <point key="canvasLocation" x="185" y="15"/>
+        </scene>
+        <!--Highscore View Controller-->
+        <scene sceneID="wE8-Ql-zOZ">
+            <objects>
+                <viewController storyboardIdentifier="HighscoreViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="LC1-hG-Qhf" customClass="HighscoreViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="EMI-bv-C64"/>
+                        <viewControllerLayoutGuide type="bottom" id="ne2-yv-DnS"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="sjk-hB-wjk">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XTH-J9-2dY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1026" y="15"/>
         </scene>
     </scenes>
 </document>
